Agregando imagenes precargadas a ejercicio 6

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,3 +17,27 @@ canvas {
     margin-top: 2%;
 }
 
+.galeria {
+	width: 90%;
+	margin: auto;
+	list-style: none;
+	padding: 20px;
+	box-sizing: border-box;
+	
+	/* display: flex; */
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.galeria li {
+	margin: 5px;
+}
+
+.galeria img {
+	width: 150px;
+	height: 100px;
+}
+
+.switch {
+    margin-top: 2%;
+}
