--- a/TP3/EntregaFinal/css/estilo.css
+++ b/TP3/EntregaFinal/css/estilo.css
@@ -36,6 +36,9 @@ body {
   z-index: 1000;
   margin-top: 180px;
   margin-left: auto;
+  
+  font-family: 'Bangers', cursive;
+  font-size: 50px;
   transform: translate(20px,0);
 }
 
